--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,12 @@
+body {
+    font-family: sans-serif;
+}
 p {
     background-color: green;
 }
 .content {
-    background-color: red;
+    background-color: silver;
 }
 #detail {
-    background-color: yellow;
+    background-color: springgreen;
 }
