--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
 }
 p {
     background-color: var(--corporate_background-color);
-    max-width: 600px;
+    max-width: 80vw;
 }
 .content {
     background-color: silver;
