Demonstrate rem and em

--- a/src/style.css
+++ b/src/style.css
@@ -8,15 +8,20 @@ p {
     background-color: var(--corporate_background-color);
     max-width: 80vw;
 }
+section {
+    font-size: 24px;
+}
 .content {
     background-color: silver;
+    margin: 20px auto;
+    padding: 10px;
+    font-size: 2em;
 }
 #detail {
     background-color: var(--corporate_background-color);
     font-weight: bold;
-    margin: 20px auto;
-    padding: 10px;
     border: 5px dotted black;
+    font-size: 2rem;
 }
 .mono {
     font-family: monospace;
