--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -1,2 +1,10 @@
 body {
+    background-color: silver;
+}
+div {
+    background-color: darkgreen;
+    width: 500px;
+    height: 200px;
+    margin: 1em 2em 3em 4em;
+    padding: 1em 2em 3em 4em;
 }
