--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -5,6 +5,8 @@ div {
     background-color: darkgreen;
     width: 500px;
     height: 200px;
-    margin: 1em 2em 3em 4em;
+    margin: 30px;
     padding: 1em 2em 3em 4em;
+    border: 15px dashed black;
+    box-sizing: border-box;
 }
