--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -5,7 +5,7 @@ div {
     background-color: darkgreen;
     width: 500px;
     height: 200px;
-    margin: 30px;
+    margin: 30px auto;
     padding: 1em 2em 3em 4em;
     border: 15px dashed black;
     box-sizing: border-box;
