--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -2,10 +2,13 @@ body {
     background-color: silver;
 }
 div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     background-color: darkgreen;
     width: 500px;
     height: 200px;
-    margin: 30px auto;
     padding: 1em 2em 3em 4em;
     border: 15px dashed black;
     box-sizing: border-box;
