--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -7,7 +7,7 @@ section {
     height: 100vh;
     display: grid;
     grid-template-columns: 2fr 4fr;
-    grid-template-rows: 1fr 6fr 1fr;
+    grid-template-rows: 1fr 6fr 1.2em;
     grid-template-areas:
     "header header"
     "nav main"
