--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -8,31 +8,25 @@ section {
     display: grid;
     grid-template-columns: 2fr 4fr;
     grid-template-rows: 1fr 6fr 1.2em;
-    grid-template-areas:
-    "header header"
-    "nav main"
-    "footer footer";
-    grid-column-gap: 0.25em;
-    grid-row-gap: 0.1em;
+    grid-gap: 0.25em;
     justify-items: stretch;
     align-items: stretch;
 }
 header {
     background-color: lightgreen;
-    grid-area: header;
+    grid-column: 1 / 3;
 }
 nav {
     background-color: lightblue;
-    grid-area: nav;
+    grid-column: 1;
 }
 main {
     background-color: yellowgreen;
-    grid-area: main;
-    align-self: start;
+    grid-column: 2 / 3;
 }
 footer {
     background-color: blueviolet;
-    grid-area: footer;
+    grid-column: 1 / 3;
     align-self: end;
 }
 nav ul {
