--- a/src/cssplayground.css
+++ b/src/cssplayground.css
@@ -20,10 +20,34 @@ nav {
     background-color: lightblue;
     grid-column: 1;
 }
+nav ul {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.5em;
+}
+nav li {
+    padding: 0.2rem;
+}
+nav li:hover {
+    background-color: lightcyan;
+}
+a {
+    text-decoration: none;
+}
+a[href^='https'] {
+    font-family: monospace;
+    font-size: 1.2rem;
+}
+a[href$='blog'] {
+    background-color: wheat;
+}
+a[href*='html'] {
+    color: burlywood;
+}
 main {
     display: grid;
     grid-template-columns: repeat(3,1fr 2fr);
-    grid-gap: 0.2em;
+    grid-gap: 0.5em;
     background-color: yellowgreen;
     grid-column: 2 / 3;
 }
@@ -32,11 +56,15 @@ footer {
     grid-column: 1 / 3;
     align-self: end;
 }
-nav ul {
-    padding-left: 1.5em;
-}
 div.content {
     background-color: #009900;
     padding: 1em;
     box-sizing: border-box;
+}
+main > div {
+    box-shadow: darkgreen 5px 5px 2px;
+}
+main > div:nth-child(2),
+main > div:nth-last-child(2) {
+    background-color: cornflowerblue;
 }
